# bc-forge

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PR_BODY.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  publish-sdk.yml
.kiro/specs/metadata-update-functions/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/token-locking-vesting/: .config.kiro  design.md  requirements.md  tasks.md
cli/: package.json  tsconfig.json
contracts/admin/: Cargo.toml
contracts/admin/src/: lib.rs
contracts/admin/test_snapshots/tests/: test_has_admin.1.json  test_set_and_get_admin.1.json
contracts/lifecycle/: Cargo.toml
contracts/lifecycle/src/: lib.rs
contracts/rate-limit/: Cargo.toml
contracts/rate-limit/src/: lib.rs
contracts/token/: Cargo.toml
contracts/token/src/: events.rs  lib.rs  proptest.rs  rate_limit.rs  reentrancy_guard.rs  test.rs
contracts/token/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_burn.1.json  test_burn_from.1.json  test_burn_insufficient_balance.1.json  test_initialize.1.json  test_mint.1.json  test_mint_multiple_users.1.json  test_mint_unauthorized_role.1.json  test_mint_while_paused.1.json  test_mint_zero_panics.1.json  test_role_management.1.json  test_transfer.1.json  test_transfer_from_insufficient_allowance.1.json  test_transfer_insufficient_balance.1.json  test_transfer_ownership.1.json  test_transfer_while_paused.1.json  test_unpause_restores_operations.1.json  test_version.1.json
contracts/ttl/: Cargo.toml
contracts/ttl/src/: lib.rs
contracts/vesting/: Cargo.toml
contracts/vesting/src/: events.rs  lib.rs  test.rs
contracts/vesting/test_snapshots/test/: test_create_vesting_mints_into_contract_and_emits_events.1.json  test_irrevocable_schedule_cannot_be_revoked.1.json  test_multiple_schedules_per_beneficiary_release_together.1.json  test_release_respects_cliff_linear_vesting_and_prevents_double_release.1.json  test_revoke_returns_only_unvested_tokens.1.json
contracts/wrapper/: Cargo.toml
contracts/wrapper/src/: events.rs  lib.rs  test.rs
contracts/wrapper/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_burn.1.json  test_burn_from.1.json  test_decimal_scaling_up.1.json  test_double_initialize_fails.1.json  test_initialize.1.json  test_pause_and_unpause.1.json  test_transfer.1.json  test_transfer_zero_amount_fails.1.json  test_underlying_token.1.json  test_unwrap_decreases_supply_and_balance.1.json  test_unwrap_zero_amount_fails.1.json  test_wrap_increases_supply_and_balance.1.json
deployments/: deploy-wrapper-testnet.md  deploy-wrapper-testnet.ps1  deploy-wrapper-testnet.sh
e2e/: Cargo.toml  README.md  integration_test.rs  test.rs
e2e/test_snapshots/: test_complete_lifecycle.1.json  test_deployment_verification.1.json  test_parallel_execution.1.json
indexer/: package.json
indexer/src/: indexer.ts
react/: eslint.config.js  eslint.config.mjs  package-lock.json  package.json
react/src/: context.tsx  hooks.ts
react/src/components/: Dropdown.test.tsx  Dropdown.tsx  index.ts
sdk/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
sdk/src/: client.test.ts  client.ts  errors.ts  events.ts  index.ts  mockClient.ts  utils.ts  walletAdapter.test.ts  walletAdapter.ts  wrapperClient.ts
sdk/src/adapters/: albedoAdapter.ts  freighterAdapter.ts  walletConnectAdapter.ts
src/errors/: sorobanParser.ts
