[package]
name = "bc-forge-lifecycle"
version = "0.1.0"
edition = "2021"
publish = false
description = "Pause/unpause lifecycle management for bc-forge contracts"
license = "MIT"
repository = "https://github.com/BCPathway/bc-forge"
homepage = "https://github.com/BCPathway/bc-forge"
readme = "../../README.md"
keywords = ["soroban", "stellar", "smart-contract", "lifecycle", "pausable"]
categories = ["cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = "26.0.1"
bc-forge-ttl = { path = "../ttl" }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
