[package]
name = "bc-forge-wrapper"
version = "0.1.0"
edition = "2021"
publish = false
description = "SEP-41 token wrapper contract for bc-forge cross-contract interoperability"
repository = "https://github.com/BCPathway/bc-forge"
license = "MIT"
keywords = ["soroban", "stellar", "smart-contract", "token", "sep-41", "wrapper"]
categories = ["cryptography::cryptocurrencies"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.11"
bc-forge-admin = { path = "../admin" }
bc-forge-lifecycle = { path = "../lifecycle" }

[dev-dependencies]
soroban-sdk = { version = "22.0.11", features = ["testutils"] }
bc-forge-token = { path = "../token", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
